# Saturday_Job_helper

./: .gitignore  LICENSE  PLAN.md  pyproject.toml
src/saturday_job_helper/: __init__.py  alerting.py  cli.py  config.py  db.py  discovery.py  discovery_service.py  llm_client.py  llm_router.py  models.py  repository.py  scoring.py
tests/: test_alerting.py  test_config.py  test_db_and_models.py  test_discovery_service.py  test_job_discovery.py  test_llm_client.py  test_llm_router.py  test_scoring.py
