[project]
name = "saturday-job-helper"
version = "0.1.0"
description = "Ajith's approval-gated AI job discovery and application helper"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "python-docx>=1.1.2",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
saturday-job-helper = "saturday_job_helper.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
